specified types for missing generics