@@ -9,14 +9,12 @@
         <version>1.0</version>
     </parent>
 
-    <groupId>com.github.javatlacati</groupId>
     <artifactId>inventarios-service</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>inventarios-service</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+<!--    <url>http://www.example.com</url>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,9 +50,40 @@
 
     <build>
         <plugins>
+            <!-- compilation config-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                    <encoding>UTF-8</encoding>
+<!--                    <fork>true</fork>-->
+<!--                    <release>8</release>-->
+<!--                    <compilerArgs>-->
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
+<!--                        <arg>-Xlint:all</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
+<!--                        <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>-->
+<!--                    </compilerArgs>-->
+<!--                    <annotationProcessorPaths>-->
+<!--                        <path>-->
+<!--                            <groupId>org.projectlombok</groupId>-->
+<!--                            <artifactId>lombok</artifactId>-->
+<!--                            <version>1.18.10</version>-->
+<!--                        </path>-->
+<!--                    </annotationProcessorPaths>-->
+                </configuration>
             </plugin>
             <!-- code coverage -->
             <plugin>
@@ -81,7 +110,7 @@
                         <version>4.13.1</version>
                     </dependency>
                 </dependencies>
-                <!--<configuration>-->
+                <configuration>
                     <!--<trimStackTrace>false</trimStackTrace>-->
                     <!--<forkCount>0</forkCount>-->
                     <!--<reuseForks>false</reuseForks>-->
@@ -90,9 +119,7 @@
                     <!--<includes>-->
                         <!--<include>**/*Test.java</include>-->
                     <!--</includes>-->
-                <!--</configuration>-->
-                <configuration>
-                    <argLine>${argLine} --illegal-access=permit</argLine>
+<!--                    <argLine>${argLine} &#45;&#45;illegal-access=permit</argLine>-->
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
